# synapse-core

./: .env.example.failover  BACKUP_README.md  CLI_REFERENCE.md  CLI_TESTING.md  COMMIT_MESSAGE.txt  CREATE_PR.md  Cargo.toml  DB_FAILOVER_ARCHITECTURE.md  DB_FAILOVER_COMMIT_MESSAGE.txt  DB_FAILOVER_COMPLETE.md  DB_FAILOVER_DELIVERABLES.md  DB_FAILOVER_DEPLOYMENT_CHECKLIST.md  DB_FAILOVER_EXECUTIVE_SUMMARY.md  DB_FAILOVER_IMPLEMENTATION_COMPLETE.md  DB_FAILOVER_INDEX.md  DB_FAILOVER_PR.md  DB_FAILOVER_QUICK_REF.md  DB_FAILOVER_README_SECTION.md  DB_FAILOVER_SUMMARY.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  FEATURE_FLAGS_COMPLETE.md  FEATURE_FLAGS_IMPLEMENTATION.md  FEATURE_FLAGS_PR.md  FEATURE_FLAGS_README_SECTION.md  FINAL_SUMMARY.md  HEALTH_CHECK_IMPLEMENTATION.md  HEALTH_CHECK_VERIFICATION.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LOAD_TESTING_GUIDE.md  LOAD_TEST_STATUS.md  NEXT_STEPS.md  PARTITION_QUICK_REF.md  PARTITION_README.md  PR_CIRCUIT_BREAKER.md  PR_DESCRIPTION.md  PR_DESCRIPTION_FINAL.md  PR_SUMMARY.md  PR_WEBHOOK_HANDLER.md  (+18 more)
.github/workflows/: ci.yml  rust.yml
.sqlx/: query-66f92d814f0e5f98372297c133ce71a2f6087bbf40f5f2fa539ba73bdb315922.json
docs/: circuit-breaker.md  database_failover.md  feature_flags.md  idempotency.md  load-test-results.md  partition_architecture.md  partitioning.md  pool_monitoring.md  webhook-authentication.md  webhook-handler.md
migrations/: 20250217000000_partition_transactions.sql  20250218000000_feature_flags.sql  20260219000000_add_assets_table.sql  20260219000000_partition_transactions.sql  20260220000000_settlements.sql  20260222000000_transaction_memo_metadata.sql  20260222000000_transaction_search_indexes.sql  partition_utils.sql
src/: cli.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  metrics.rs  schemas.rs  secrets.rs  startup.rs
src/Admin API Authentication Tests/: .gitignore  Cargo.toml  README.md  setup_branch.sh
src/Admin API Authentication Tests/src/: lib.rs  models.rs
src/Admin API Authentication Tests/src/handlers/: admin.rs
src/Admin API Authentication Tests/src/middleware/: auth.rs
src/Admin API Authentication Tests/tests/: admin_auth_test.rs
src/Database Pool Manager Failover Tests/: Cargo.toml  README.md
src/Database Pool Manager Failover Tests/src/db/: mod.rs  pool_manager.rs
src/Database Pool Manager Failover Tests/tests/: pool_manager_test.rs
src/adapters/: postgres_transaction_repository.rs
src/config/: assets.rs
src/db/: cron.rs  mod.rs  models.rs  partition.rs  pool_manager.rs  queries.rs
src/domain/: transaction.rs
src/graphql/: schema.rs
src/graphql/resolvers/: mod.rs  settlement.rs  transaction.rs
src/handlers/: admin.rs  auth.rs  dlq.rs  export.rs  feature_flag_examples.rs  graphql.rs  graphql.rs.bak  mod.rs  search.rs  settlements.rs  webhook.rs  ws.rs
src/handlers/v2/: mod.rs
src/middleware/: auth.rs  idempotency.rs  ip_filter.rs  mod.rs  request_logger.rs  versioning.rs
src/services/: backup.rs  feature_flags.rs  mod.rs  processor.rs  settlement.rs  transaction_processor.rs
src/stellar/: client.rs  mod.rs
src/use_cases/: process_deposit.rs
src/utils/: cursor.rs  mod.rs  sanitize.rs
src/validation/: mod.rs
tests/: api_versioning_test.rs  backup_test.rs  circuit_breaker_test.rs  db_failover_test.rs  dlq_test.rs  export_test.rs  feature_flags_test.rs  graphql_test.rs  health_check_test.rs  idempotency_test.rs  integration_test.rs  webhook_auth_test.rs  webhook_delivery_test.rs  webhook_test.rs
tests/load/: README.md  callback_load.js  health_check.js  idempotency_test.js  soak_test.js  spike_test.js
