[package]
name = "synapse-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "bigdecimal",
    "json",
] }
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
home = "=0.5.11"
reqwest = { version = "0.11", features = ["json"] }
failsafe = "1"
clap = { version = "4", features = ["derive"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
governor = "0.6"
redis = { version = "0.24", features = ["tokio-comp"] }
ipnet = "2.9"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
tower-http = { version = "0.4", features = ["cors"] }
url = "2.5"
tower = { version = "0.4", features = ["util"] }
tokio-stream = "0.1"
futures-util = "0.3"
async-graphql = { version = "6", features = ["chrono", "uuid", "bigdecimal"] }
async-graphql-axum = "6"

[dev-dependencies]
mockito = "1"
tempfile = "3"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "migrate",
] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
reqwest = { version = "0.11", features = ["json"] }
